	bidi-reordered continued line.  Return immediately when the first
	hit is found in a line that is not continued, or when an exact
	match for CHARPOS is found.
	(mouse_face_from_buffer_pos): Rewrite to not assume that
	START_CHARPOS is always in mouse_face_beg_row.  If necessary, swap
	mouse_face_beg_row and mouse_face_end_row so that the former is
	always above the latter or identical to it.

2010-08-28  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (mouse_face_from_buffer_pos): Fix code using bug#1220 as
	test case.  Implement  highlight for R2L rows.  Fix the case of
	continued L2R lines.
	(show_mouse_face): Support drawing highlighted R2L lines.
	(coords_in_mouse_face_p): New function, bidi-aware.
	(cursor_in_mouse_face_p, note_mouse_highlight, erase_phys_cursor):
	Call it instead of comparing with mouse-face members of dpyinfo.
	(note_mode_line_or_margin_highlight): Fix confusingly swapped
	usage of hpos and vpos.

2010-08-21  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (mouse_face_from_buffer_pos): Support mouse highlight in
	bidi-reordered L2R lines.  Continued lines are not yet supported.

	* dispnew.c (buffer_posn_from_coords): Fix off-by-one error in
	mirroring pixel positions.

2010-08-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* alloc.c (malloc_sbrk_used, malloc_sbrk_unused): Remove,
	write only.
	(init_alloc_once): Remove writes to malloc_sbrk_unused, and
	malloc_sbrk_used, nothing uses them.

	* puresize.h: Remove code assuming PNTR_COMPARISON_TYPE is not
	defined, unconditionally defined in lisp.h.

	* term.c: Do not include <termios.h>, systty.h does it.

	* s/unixware.h (HAVE_TCATTR):
	* s/aix4-2.h (HAVE_TCATTR): Remove definitions, not needed.
	systty.h defines it when HAVE_TERMIOS is defined.

2010-08-20  Eli Zaretskii  <eliz@gnu.org>

	* dispnew.c (buffer_posn_from_coords): Fix last change for text
	terminals: add one-character offset for R2L lines.

	* emacs.c <emacs_version>: Add a comment regarding